--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "lucide-react": "^0.447.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tailwind-merge": "^2.5.3",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwind-merge": "^2.5.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
@@ -39,6 +38,7 @@
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.13",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.8.0",
     "vite": "^5.4.1"
